[package]
name = "arboard"
version = "3.6.0"
description = "Image and text handling for the OS clipboard."
repository = "https://github.com/1Password/arboard"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["clipboard", "image"]
edition = "2021"
rust-version = "1.71.0"

[features]
default = ["image-data"]
image-data = [
    "dep:objc2-core-graphics",
    "dep:objc2-core-foundation",
    "image",
    "windows-sys",
    "core-graphics",
]
wayland-data-control = ["wl-clipboard-rs"]

# For backwards compat
core-graphics = ["dep:objc2-core-graphics"]
windows-sys = ["dep:windows-sys"]
image = ["dep:image"]
wl-clipboard-rs = ["dep:wl-clipboard-rs"]

[dependencies]

[dev-dependencies]
env_logger = "0.10.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.52.0, <0.60.0", optional = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }
clipboard-win = { version = "5.3.1", features = ["std"] }
log = "0.4"
image = { version = "0.25", optional = true, default-features = false, features = [
    "png",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "NSArray",
    "NSString",
    "NSEnumerator",
    "NSGeometry",
    "NSValue",
] }
objc2-app-kit = { version = "0.3.0", default-features = false, features = [
    "std",
    "objc2-core-graphics",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSImage",
] }
objc2-core-foundation = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "CGImage",
    "CGColorSpace",
    "CGDataProvider",
] }
image = { version = "0.25", optional = true, default-features = false, features = [
    "tiff",
] }

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
log = "0.4"
x11rb = { version = "0.13" }
wl-clipboard-rs = { version = "0.9.0", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = [
    "png",
] }
parking_lot = "0.12"
percent-encoding = "2.3.1"

[[example]]
name = "get_image"
required-features = ["image-data"]

[[example]]
name = "set_image"
required-features = ["image-data"]
